ajout des images et suppression du scroll

--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
 <body>
     <main class="ensemble">
         <button class="dislike" type="submit"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg></button>
-        <div class="card"></div>
+        <div class="card">
+            <!-- <img src="src/assets/img/Among_Us.jpg" alt="Among Us game cover">
+            <img src="src/assets/img/cod.webp" alt="Call of Duty Black Ops 6 game cover">
+            <img src="src/assets/img/Fortnite.jpg" alt="Fortnite game cover">
+            <img src="src/assets/img/hogwart.jpeg" alt="Hogwarts Legacy game cover">
+            <img src="src/assets/img/League_of_Legends.jpeg" alt="League of Legends game cover">
+            <img src="src/assets/img/multiversus.jpg" alt="Multiversus game cover">
+            <img src="src/assets/img/Outer_Wilds.jpg" alt="Outer Wilds game cover">
+            <img src="src/assets/img/Tsushima.jpg" alt="Ghost of Tsuchima game cover">
+            <img src="src/assets/img/Valorant.jpeg" alt="Valorant game cover">
+            <img src="src/assets/img/Zelda.jpg" alt="Zelda Breath of the Wild game cover"> -->
+        </div>
         <button class="like" type="submit"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg></button>
     </main>
     <div>
         <button class="stats" type="submit">View your likes</button>
     </div>
-    
+    <script src="src/index.js"></script>
 </body>
 </html>
